build2.txt
In file included from src/physics/GJK.h:50,
                 from src/physics/Collider3D.h:266,
                 from tests/test_physics3d.cpp:19:
src/physics/GJK.inl: In lambda function:
src/physics/GJK.inl:102:39: error: 'find_if' is not a member of 'std'; did you mean 'find'? [-Wtemplate-body]
  102 |                     auto match = std::find_if(edges.begin(), edges.end(), [&](const std::pair<int, int>& edge) {
      |                                       ^~~~~~~
      |                                       find
tests/test_physics3d.cpp: In function 'void testSolidMechanics()':
tests/test_physics3d.cpp:2223:23: error: 'struct engine::physics::XPBDConstraint' has no member named 'restDistance'
 2223 |     check(constraint->restDistance > 1.0f, "Permanent deformation: rest distance permanently increased");
      |                       ^~~~~~~~~~~~
